June 2013 4.2
  - Samba 4 support: users, groups, hosts
  - Unix: allow to change format for suggested user name
  - LAM Pro:
   -> Password self reset: support new identification methods: user, email, user or email, employee number
   -> Custom fields: support PDF, profiles and multi-value text fields
   -> Personal: support password mail sending in file upload


19.03.2013 4.1
  - Updated EDU person module (RFE 3599128)
  - Personal: allow management of user certificates (RFE 1753030)
  - Unix: Support Samba Unix Id pool for automatic UID/GID generation
  - DHCP: support separated dhcpServer and dhcpService entries
  - LAM Pro:
   -> Support Qmail groups
  - Fixed bugs:
   -> changed user and group size limits (3601649)


06.01.2013 4.0.1
  - support additional LDAP filters for account types
  - allow to hide account types (that are required by other account types)
  - fixed bugs:
   -> missing directories config/pdf and config/profiles on fresh installations


17.12.2012 4.0
  - account profiles and PDF structures are now bound to server profile
  - IMAP: support "/" as path separator (RFE 3575692)
  - show server profile name on config pages (RFE 3579768)
  - LAM Pro:
   -> Custom fields for admin interface
   -> MIT Kerberos support
   -> Qmail user support


25.09.2012 3.9
  - Kolab 2.4 support
  - Puppet support
  - LAM Pro
   -> support RFC2307bis automount entries
   -> read-only fields in self service
  - fixed bugs
   -> Hidden tools are still shown on the "Tools" page (3546092)


19.07.2012 3.8
  - quick (un)lock for users
  - allow to disable tools
  - LAM Pro:
   -> Custom fields module allows to manage custom LDAP attributes in Self Service
   -> Self service now supports user self registration
   -> Separate group of names module for users allows to manage memberships if Unix module is not used (RFE 3504429)
   -> Named object module for groups (used for rfc2307bis schema)
   -> Password change page allows account (un)locking