@@ -2,6 +2,7 @@ June 2013 4.2
   - Samba 4 support: users, groups, hosts
   - Unix: allow to change format for suggested user name
   - LAM Pro:
+   -> allow to hide buttons to create/delete entries for each account type
    -> Password self reset: support new identification methods: user, email, user or email, employee number
    -> Custom fields: support PDF, profiles and multi-value text fields
    -> Personal: support password mail sending in file upload
